checked with new compression vectors

--- a/compressed_likelihood/inifiles/sample_compressed_LCDM.ini
+++ b/compressed_likelihood/inifiles/sample_compressed_LCDM.ini
@@ -6,8 +6,7 @@ with_low_ell = True
 # location of compression vectors
 # compression vectors should match parameters you are sampling over
 # make the compression vectors before trying to sample the likelihood
-compression_vector_folder = /Users/heatherp/Documents/data-compression/compression_vectors/output_datafiles/LambdaCDM
-#../../compression_vectors/output_datafiles/LambdaCDM/
+compression_vector_folder = ../../compression_vectors/output/LambdaCDM/
 
 # where parameter files are located
 # either give an absolute path or
@@ -20,10 +19,8 @@ save_dir=../chains/
 save_file_prefix=LCDM_all_ell
 
 # number of walkers in emcee
-nwalkers = 16
+nwalkers = 64
 
-burnin = 0
-# total number of steps after burnin
-nsteps = 2
-# pause to incrementally save output after taking this number of steps
-nsteps_incremental_write = 1
+burnin = 1000
+# maximum total number of steps
+nsteps = 2500
