--- a/likelihood/inifiles/sample_compressed_LCDM.ini
+++ b/likelihood/inifiles/sample_compressed_LCDM.ini
@@ -21,6 +21,8 @@ save_file_prefix=LCDM_all_ell
 # number of walkers in emcee
 nwalkers = 64
 
-burnin = 1000
+burnin = 0
 # maximum total number of steps
-nsteps = 2500
+nsteps = 3
+# check autocorrelation length (evaluate convergence)
+nsteps_check_autocorr = 1
