added option to specify data and saving directories

--- a/compression_vectors/inifiles/settings.ini
+++ b/compression_vectors/inifiles/settings.ini
@@ -3,5 +3,5 @@ year = 2015
 
 compression_inifile = inifiles/LambdaCDM.ini
 
-#data_dir = data/
-#save_dir = output/
+data_dir = data
+save_dir = output/LambdaCDM
