--- a/compression_vectors/inifiles/LambdaCDM.ini
+++ b/compression_vectors/inifiles/LambdaCDM.ini
@@ -1,4 +1,5 @@
 # param_name; fiducial value; make compression vector (1 or 0); order (0,1,2,...)
+# param_name must correspond to the CLASS Python wrapper naming conventions: https://github.com/lesgourg/class_public/wiki/Python-wrapper
 # if there is just a fiducial value, not an order, then the fiducial value will
 # be used in finding the compression vectors, but a compression vector for that
 # parameter will not be computed
