--- a/compression_vectors/inifiles/settings.ini
+++ b/compression_vectors/inifiles/settings.ini
@@ -1,7 +1,7 @@
 # year (2018 for Planck 2018 likelihood; 2015 to use Planck 2015)
 year = 2018
 
-compression_inifile = inifiles/LambdaCDM.ini
+compression_inifile = inifiles/LambdaCDM2018.ini
 
 data_dir = data
 save_dir = output/LambdaCDM
